<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="T_ASTRO_DATA" Id="{29bae18d-24c0-44c3-9db1-defd3bbc5e16}">
    <Declaration><![CDATA[TYPE T_ASTRO_DATA :
STRUCT
	time_data:			T_ASTRO_TIME;
	environment:		T_ASTRO_ENVIRONMENT;
	site:				T_ASTRO_SITE_CONSTANTS;
	motion:				T_ASTRO_POLAR_MOTION;
	mean:               T_ASTRO_MEAN_COORDINATES;
	tracking_data:		T_ASTRO_TRACKING_DATA;
	dut:             	LREAL := 0.0;
	equinox:			LREAL := 2000;
	wavelength:      	LREAL := 600;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>